@@ -1,3 +1,8 @@
+2003-10-11  Pavel Roskin  <proski@gnu.org>
+
+	* file.c: Use struct vfs_class, not type vfs, which should be
+	internal to VFS code.
+
 2003-10-08  Pavel Roskin  <proski@gnu.org>
 
 	* background.h: Eliminate background_wait variable.  Adjust all
